--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,7 +4,7 @@
 <div class='nav'>
   <ul class='lists-right'>
     <% if user_signed_in? %>
-      <li><%= link_to current_user.username, "#", class: "user-nickkname"  %></li>
+      <li><%= current_user.username %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
     <% else %>
       <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
