--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,69 @@
-// Place all the styles related to the tasks controller here.
+// Place all the styles related to the calendars controller here.
 // They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// You can use Sass (SCSS) here: https://sass-lang.com/
+body {
+  background-color: whitesmoke;
+}
+
+.calendar {
+  width: 100vw;
+  margin-top: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-size: 3vh;
+}
+
+.item {
+  margin: 0.5vw;
+  border: medium solid lightgray;
+  width: 12vw;
+  height: auto;
+  background-color: rgb(246, 253, 255);
+}
+
+.date {
+  height: 5vh;
+  display: flex;
+  font-size: 3vh;
+  align-items: center;
+  justify-content: center;
+  border-bottom: medium solid rgb(0, 0, 0);
+}
+
+.content {
+  min-height: 5vh;
+  padding: 3px;
+  white-space: nowrap;
+  overflow: scroll;
+}
+
+.plan-list {
+  margin: 1vh 0;
+  color: darkgray;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15vh;
+}
+
+.lavel {
+  font-size: 3vh;
+  color: rgb(255, 255, 255);
+}
+
+.text-input {
+  height: 4vh;
+  width: 15vw;
+  margin: 0 2vw;
+}
+
+.date-select {
+  height: 4vh;
+  width: 13vw;
+  margin: 0 2vw;
+}
