--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -144,8 +144,8 @@
 
 .register-red-btn {
   width: 100%;
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: lightblue;
+  border: 1px solid lightblue;
   color: #fff;
   line-height: 48px;
   font-size: 14px;
